--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- font awesome v4.7.0 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
+    <!-- js -->
+    <link rel="stylesheet" href="miarchivo.js">
 </head>
 <body>
 
@@ -33,8 +33,8 @@
               <ion-icon name="menu-outline"></ion-icon>
             </label>
             <ul class="nav__menu">
-              <li><a class="active" href="#">Inicio</a></li>
-              <li><a href="#">Productos</a></li>
+              <li><a class="active" href="index.html">Inicio</a></li>
+              <li><a href="productos.html">Productos</a></li>
               <li><a href="#">Redes</a></li>
             </ul>
           </div>
@@ -87,7 +87,7 @@
 
       <div class="text_main">
         <h2 class="text__one">Para mas productos ingresar en el siguiente link</h2>
-        <a href="#" style="--clr:#1e9bff" class="button2"> <span>Productos</span><i></i></a>
+        <a href="productos.html" style="--clr:#1e9bff" class="button2"> <span>Productos</span><i></i></a>
       </div>
 
 
@@ -112,7 +112,7 @@
 
     
     
-
+    <script src="miarchivo.js"></script>
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/cbbad85b0e.js" crossorigin="anonymous"></script>
     <!-- aos -->
