--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- font awesome v4.7.0 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- js -->
-    <link rel="stylesheet" href="miarchivo.js">
+    <!-- <link rel="stylesheet" href="miarchivo.js"> -->
 </head>
 <body>
 
@@ -112,7 +112,7 @@
 
     
     
-    <script src="miarchivo.js"></script>
+    <!-- <script src="miarchivo.js"></script> -->
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/cbbad85b0e.js" crossorigin="anonymous"></script>
     <!-- aos -->
