agregamos modificaciones con Dom

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="card" style="width: 18rem;">
           <img src="img/Microfibra.jpeg" class="card-img-top" alt="trapo 1">
           <div class="card-body">
-            <h5 class="card-title">MICROFIBRAS</h5>
+            <h5 class="card-title">Microfibras</h5>
             <p class="card-text">35 x 35cm <br> Marca Thames</p>
           </div>
         </div>
@@ -70,7 +70,7 @@
         <div class="card" style="width: 18rem;">
           <img src="img/cepillo1.jpeg" class="card-img-top" alt="Cepillo 1">
           <div class="card-body">
-            <h5 class="card-title">ESCOBILLONES</h5>
+            <h5 class="card-title">Escobillones</h5>
             <p class="card-text"> Escobillones <br> Cerda</p>
           </div>
         </div>
@@ -79,14 +79,14 @@
         <div class="card" style="width: 18rem;">
           <img src="img/lysoform.jpeg" class="card-img-top" alt="Lysoform">
           <div class="card-body">
-            <h5 class="card-title">LYSOFORM</h5>
+            <h5 class="card-title">Lysoform</h5>
             <p class="card-text"> 360cm <br> Desinfectante </p>
           </div>
         </div>
       </div>
 
       <div class="text_main">
-        <h2 class="text__one">Para mas productos ingresar en el siguiente link</h2>
+        <h2 id="textOne">Para mas productos ingresar en el siguiente link</h2>
         <a href="productos.html" style="--clr:#1e9bff" class="button2"> <span>Productos</span><i></i></a>
       </div>
 
@@ -111,8 +111,8 @@
 
 
     
-    
-    <!-- <script src="miarchivo.js"></script> -->
+    <!-- JS -->
+    <script src="miarchivo.js"></script>
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/cbbad85b0e.js" crossorigin="anonymous"></script>
     <!-- aos -->
