agregamos evento click

--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
       </div>
 
       <div class="text_main">
-        <h2 id="textOne">Para mas productos ingresar en el siguiente link</h2>
-        <a href="productos.html" style="--clr:#1e9bff" class="button2"> <span>Productos</span><i></i></a>
+        <h2 id="textOne">Para mas productos ingresar en el siguiente link o puede buscarlos</h2>
+        <a href="productos.html" style="--clr:#1e9bff" id="button2"> <span>Productos</span><i></i></a>
+        <input type="text" placeholder="Buscar" id="PR">
+        <button type="submit" id="buscar">Buscar</button>
       </div>
 
 
